--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-    "name": "NUbugger",
-    "description": "Nubots debugging web application",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "start": "node app"
-    },
-    "dependencies": {
-        "express": "3.1.0",
-        "socket.io": "0.9.13",
-        "jade": "*"
-    }
+  "name": "application-name",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "3.4.5",
+    "jade": "*"
+  }
 }
