--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.4.5",
-    "jade": "*"
+	"socket.io": "0.9.16",
+	"zmq": "2.5.1",
+    "jade": "0.35.0"
   }
 }
